--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,7 +24,7 @@
     <div class="background-text2">LARO</div>
     <nav class="navbar">
         <div class="logo">
-            <a href="/">LARO</a>
+            <a href="/dashboard/">LARO</a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search Laro" />
